--- a/opdr 1/index.html
+++ b/opdr 1/index.html
@@ -9,14 +9,14 @@
     
     <section>
         <div>
-        <h1 id="output"></h1>
-        <h2 id="winkel"></h2>
-        <h3 id="winkeltje"></h3>
-        <h4 id="sort"></h4>
+        <p id="output"></p>
+        <p id="winkel"></p>
+        <p id="winkeltje"></p>
+        <p id="sort"></p>
         <p id="eten"></p> 
     </div>
     <div>
-        <h3 id="eten"></h3>
+        <p id="eten"></p>
     </div>
     </section>
     
