--- a/opdracht-4/index.html
+++ b/opdracht-4/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id></h1>
+    <section>
+        <p id="weergave"></p>
+    </section>
     
 </body>
 </html>
