--- a/opdracht-7/index.html
+++ b/opdracht-7/index.html
@@ -1,13 +1,13 @@
-!DOCTYPE html>
-<html lang="nl">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="blok" id="blok"></div>
+    <div class="cube" id="cube"></div>
     
 
     <script src="app.js"></script>
